styles/globals.css
:root {
  --bg: #efefef;
  --fg: #222222;
  --blockquote-bg: #e6e6e6;  
  --blockquote-fg: #222222;
  --blockquote-border: #c6c6c6;
  --link-color: #0070f3;
  --fg-toggle: #666666;
  --code-bg: #dbdbdbff;
  --code-fg: #222222;
  --hr-colour: #232323;
  --header-border-colour: rgba(186, 186, 186, 0.3)
  /*
  --font-body: var(--font-sans-serif);
  --font-article-body: var(--font-serif);
  --font-article-heading: var(--font-sans-serif);
  */
}

[data-theme="dark"] {
  --bg: #222222;
  --fg: #efefef;
  --fg-toggle: #aaaaaa;
  --blockquote-bg: #333333;  
  --blockquote-fg: #efefef;
  --blockquote-border: #686868;
  --link-color: #a3f5dcff;
  --code-bg: #171717;
  --code-fg: #e3e3e3ff;
  --hr-colour: #787878ff;  
  --header-border-colour: rgba(62, 62, 62, 0.3)
}

html,
body {
  background-color: var(--bg);
  color: var(--fg);
  padding: 0;
  margin: 0;
  /*font-family: 'Times New Roman', Times, serif, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;*/
  /*font-family: -apple-system,BlinkMacSystemFont,'avenir next',avenir,'helvetica neue',helvetica,ubuntu,roboto,noto,'segoe ui',arial,sans-serif;*/
  line-height: 1.62;
  font-size: 21px;
  font-optical-sizing: auto;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;

}

aside.callout-basic {
    color: var(--blockquote-fg);
    background: var(--blockquote-bg);
    margin: 0 2rem 1rem 0;
    padding: 1.2rem 2.5rem 1.3rem 2.2rem;
    border-left: solid 6px var(--blockquote-border);
    position: relative;  
}

aside.callout {
    color: var(--blockquote-fg);
    background: var(--blockquote-bg);
    margin: 0 2rem 1rem 0;
    padding: 1.2rem 2.5rem 1.3rem 2.2rem;
    border-left: solid 6px var(--blockquote-border);
    position: relative;
}

aside.callout > :first-child {
  margin-top: 0;
}

aside.callout > :last-child {
  margin-bottom: 0;
}

article h1,
article h2,
article h3,
article h4 {
  font-family: "Barlow Semi Condensed", sans-serif;
  margin-block-start: 1.7em;
}

article .byline {
    font-family: "Barlow Semi Condensed", sans-serif;
    margin-bottom: 35px;
}

article {
  font-family: "Literata", serif;
}

footer {
  font-family: "Barlow Semi Condensed", serif;
}

@media (max-width: 600px) {
    body {
        font-size: 17px;
    }
}

* {
  box-sizing: border-box;
}

a {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  text-underline-offset: 4px;
}

img {
  max-width: 100%;
  display: block;
}

.lightText {
    color: #777;
}

.lightText span {
    margin-left: 0.76rem;
    font-size: 0.7rem;
}

@media (min-width: 800px) {
  .lightText span {
    margin-left: 0.76rem;
    font-size: 0.8rem;
  }
}

.lightLink {
    color: #777;
    /*margin-right: 1rem;*/
    margin: 0 0.35rem;
}

/* Markdown post extras, can't be in a css module */
img[title="imgSmall"] {
    max-width: 80%;
}

sup {
    font-size: small;
}

